fix(actions): gemini-cliプロンプトのインジェクションを修正
triageワークフローが、gemini-cliプロンプトの構築方法に起因するコマンドインジェクションの脆弱性により失敗していました。Issueのタイトルや本文に`!{...}`のような特殊文字が含まれていると、CLIがそれを解釈・実行しようとしてエラーが発生していました。

この変更では、`prompt_file_inputs`を使用して安全にプロンプトに変数を渡すように切り替えます。これにより、入力がリテラル文字列として扱われ、コマンドインジェクションを防ぎ、ワークフローのエラーを解決します。

- `.github/commands/gemini-triage.toml`を修正し、`!{echo }`の代わりにプレースホルダー構文`!{variable}`を使用するように変更
- `.github/workflows/gemini-triage.yml`を更新し、`env`ブロックを削除して`run-gemini-cli`ステップで`prompt_file_inputs`を使用するように変更

--- a/.github/commands/gemini-triage.toml
+++ b/.github/commands/gemini-triage.toml
@@ -14,22 +14,22 @@ You are an issue triage assistant. Analyze the current GitHub issue and identify
 
 **Available Labels** (comma-separated):
 ```
-!{echo $AVAILABLE_LABELS}
+!{available_labels}
 ```
 
 **Issue Title**:
 ```
-!{echo $ISSUE_TITLE}
+!{issue_title}
 ```
 
 **Issue Body**:
 ```
-!{echo $ISSUE_BODY}
+!{issue_body}
 ```
 
 **Output File Path**:
 ```
-!{echo $GITHUB_ENV}
+!{github_env}
 ```
 
 ## Steps
@@ -43,7 +43,7 @@ You are an issue triage assistant. Analyze the current GitHub issue and identify
 4. Use the "echo" shell command to append the CSV labels to the output file path provided above:
 
     ```
-    echo "SELECTED_LABELS=[APPROPRIATE_LABELS_AS_CSV]" >> "[filepath_for_env]"
+    echo "SELECTED_LABELS=[APPROPRIATE_LABELS_AS_CSV]" >> "!{github_env}"
     ```
 
     for example:
